kubernetes_example/optional/prometheus/metrics-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: clamav-rest-service-metrics
  namespace: clamav-rest
  labels:
    app: clamav-rest-service
spec:
  type: ClusterIP
  ports:
  - name: metrics
    protocol: TCP
    port: 9443
    targetPort: https
  selector:
    app: clamav-rest-service
